--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "spatie/laravel-medialibrary": "^11.15",
-        "stancl/tenancy": "^3.9"
+        "stancl/tenancy": "^3.9",
+        "stripe/stripe-php": "^18.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
